-> Global settings management. -> Stats tab presentation reworked. -> UI buggy data model refactored. -> FXML is now used for a majority of scenes and application is displayed in a VGA format. -> Detailed README.md.